--- a/svgExplain.html
+++ b/svgExplain.html
@@ -144,7 +144,7 @@
                     <li>使用網站提供的font方式貼上class使用(需使用CDN或import的方式導入檔案)</li>
                 </ul>
                 <p>也可以自行使用軟體程式產出svg如Adobe Illustrator，儲存的方式選擇svg檔案。</p>
-                <img src="./images/svg01.webp" alt="SVG儲存 圖片" style="width: 400px;">
+                <img src="./images/svg01.webp" alt="SVG儲存 圖片" style="max-width: 400px;">
                 <p>就會產出以下這種程式碼</p>
                 <ol class="mg_bottom10">
                     <li>
@@ -176,7 +176,7 @@
     <footer>
         <p>&copy; ayvc0420</p> 
         <div>
-            本站最佳瀏覽解析度為1920x1080，不支援IE瀏覽器
+            本站最佳瀏覽解析度為1920x1080，不支援IE瀏覽器<br>本頁面使用低於427解析度的裝置瀏覽時可能會產生元素偏移等現象。
         </div>
         <div class="left">
             <a href="javascript:;" id="goTop" class="footer_img">
