meta tag update

--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="前端技術分享介紹"/>
     <meta name=”description” content="前端技術分享介紹"/>
-    <meta name="Keywords" content="前端,網頁,HTML入門"/>
+    <meta name="Keywords" content="前端入門,網頁入門,HTML入門,CSS"/>
+
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
+    <meta property="og:image" content="https://ayvc0420.github.io/webDesign/images/logoIcon.webp"/>
+    <meta property="og:title" content="前端入門技術分享介紹" >
+    <meta property="og:locale" content="zh-TW"/>
+    <meta property="og:description" content="前端入門技術分享介紹"/>
+    <meta property="og:keywords" content="前端入門技術分享介紹,前端入門,網頁入門"/>
+
     <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
+    <meta name="twitter:title" content="前端入門技術分享介紹">
+    <meta name="twitter:description" content="前端入門技術分享介紹"/>
+    <meta name="twitter:image" content="https://ayvc0420.github.io/webDesign/images/logoIcon.webp">
+
+    <meta property="name" content="介紹前端入門技術"/>
+    <meta property="image" content="https://ayvc0420.github.io/webDesign/images/logoIcon.webp"/>
+    <meta property="url" content="https://ayvc0420.github.io/webDesign/index.html"/>
+    <meta property="description" content="前端入門技術分享介紹"/>
+    <meta property="keywords" content="前端入門技術分享介紹,前端入門,網頁入門"/>
+
+    
     <title>前端技術分享介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
