--- a/dockerExplain.html
+++ b/dockerExplain.html
@@ -75,14 +75,14 @@
 
             <header class="header">
                 <h2>前言</h2>
-                <p>本篇僅介紹Docker並不含任何實作，原因為Docker並不是每個網頁開發必須會使用到的工具，在前端開發時經常會因為環境影響造成功能不同，如團隊開發作業系統的差異提升開發困難，因此使用Docker可以有效處理這個問題。</p>
+                <p>本篇僅介紹Docker並不含任何實作，原因為Docker並不是每個網頁開發必須會使用到的工具，在前端開發時經常會因為環境影響造成功能不同，如團隊開發作業系統的差異容易造成開發困難，因此使用Docker可以有效處理這個問題。</p>
             </header>
 
             <div class="code">
                 <h3>Docker是什麼?</h3>
                 <p>使用Docker建立一個統一的開發測試環境稱為容器，與虛擬機相似但是執行所需的資源最大相差數十倍，Docker的資源使用率更高也更好管理，使用Docker前須先熟悉Linux常見指令。</p>
                 <h3>容器</h3>
-                <p>容器(container)是Docker建立的測試環境，容器由映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念</p>
+                <p>容器(container)是Docker建立的測試環境，容器由映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念。</p>
                 <h3>映像檔</h3>
                 <p>映像檔(images)是Docker建立容器必備的檔案，一個映像檔內會含有執行所需要的工具如後端會含有node.js，映像檔實作可以參考<a href="https://ithelp.ithome.com.tw/articles/10205977?sc=pt" target="new">製作自己的映像檔</a>，一般而言前端並不會自製映像檔，這個映像檔可能是來自後端或是其他倉庫拉下使用。</p>
                 <h3>倉庫</h3>
