--- a/htmlExplain.html
+++ b/htmlExplain.html
@@ -311,8 +311,24 @@
                     </ol>
                 </div>
             </article>
+            <article>
+                <div>
+                    <h4>label tag</h4>
+                    <p>label在處理input參數時非常好用，label中for參數填入input對象的id時點擊label區塊時就會影響input對象</p>
+                    <ol>
+                        <li>&lt;label for="targetId">文字或其他圖片等填滿區塊的內容&lt;/label></li>
+                    </ol>
+                </div>
+                <div>
+                    <h4>form tag</h4>
+                    <p>form的參數主要分為action、methods兩個，在前端將使用者輸入input資料傳送至後端時是一個非常好用的標籤，使用上時需要將form包覆在input外，action的參數為目標url而methods則是規定是get或post的方式傳輸</p>
+                    <ol>
+                        <li>&lt;form action="target.html" methods="get"><br>&nbsp;&nbsp;&lt;input type="text" name=""><br>&nbsp;&nbsp;&lt;input type="radio" name=""><br>&lt;/form></li>
+                    </ol>
+                </div>
+            </article>
         </section>
-
+        
 
         <article class="end_text">
             <h2>小結</h2>
