--- a/jqueryExplain.html
+++ b/jqueryExplain.html
@@ -179,11 +179,11 @@
                     <p>toggle可以偵測對象是否為隱藏狀態，如果是則顯示，反之則隱藏，()內可以放入時間參數設定切換改為動畫產生單位是毫秒</p>
                     <div class="effect_view">
                         <div class="jq1">
-                            <p>隱藏效果的文字</p>
+                            <p class="no_p">隱藏效果的文字</p>
                         </div>
                         <button class="jq1_btn">查看效果</button>
                     </div>
-                    <p>也可以透過jQ控制css屬性樣式</p>
+                    <p >也可以透過jQ控制css屬性樣式</p>
                     <li>
     <pre>
     &lt;style>
@@ -204,7 +204,7 @@
                     <p>在這邊使用class的原因是因為不考慮css權重時css處理樣式使用的資源會低於JS，且使用class可以觸發多個不同效果只要在一個class內預先寫好樣式即可</p>
                     <div class="effect_view">
                         <div class="jq2">
-                            <p>新增/移除class的文字</p>
+                            <p class="no_p">新增/移除class的文字</p>
                         </div>
                         <button class="jq2_btn">查看效果</button>
                     </div>
