--- a/vueExplain.html
+++ b/vueExplain.html
@@ -214,6 +214,9 @@
                     <br>
                     <p>以上是最常見的使用包含click監聽、show條件顯示、v-Model雙向綁定、{{}}單向顯示資料、keyup鍵盤操作事件、for in迴圈，其中v-on:click的縮寫是@click<br>更多如v-bind、v-html等應用參考<a href="https://vuejs.org/v2/guide/syntax.html" target="new">官方文件</a></p>
                 </ol>
+                <h3>template</h3>
+                <p>使用Vue時可以在JS中先寫好html結構以及相關參數如@click等，透過自製的template標籤將已寫好的結構在HTML上呈現，這麼做的好處是如果有100個網站分支的共通佈局是同樣的，包含導航欄、橫幅以及footer底部時，只要更新template部分就可以一次性更新在100個頁面上呈現的畫面。</p>
+                <p class="mark">詳細的使用方式日後待補!</p>
             </div>
         </section>
 
