--- a/gitExplain.html
+++ b/gitExplain.html
@@ -187,8 +187,16 @@
         <article class="end_text">
             <h2>小結</h2>
             <p>透過上述介紹應該對Git有基本了解了吧?</p>
-            <p>Git不止可以協同多人作業，自行開發專案時也是非常好用的工具，更詳細的Git使用可以參考<br><a href="https://backlog.com/git-tutorial/tw/" target="new">猴子都能懂Git指南</a>、<a href="https://learngitbranching.js.org/?locale=zh_TW" target="new">透過遊戲學習Git</a>、<a href="https://www.youtube.com/watch?v=F-ubntPTT1k" target="new">Alex Git基礎開始</a></p>
-            <p>備註:使用Git下指令時建議先確認目前HEAD位置，可以使用Git Graph工具藍色圓圈就是當前HEAD所在位置，或使用cat .git/HEAD指令查看當前所在分支位置。</p>
+            <p>Git不止可以協同多人作業，自行開發專案時也是非常好用的工具，更詳細的Git使用可以參考<br>
+                <a href="https://backlog.com/git-tutorial/tw/" target="new">猴子都能懂Git指南</a>
+                、
+                <a href="https://learngitbranching.js.org/?locale=zh_TW" target="new">透過遊戲學習Git</a>
+                、
+                <a href="https://www.youtube.com/watch?v=F-ubntPTT1k" target="new">Alex Git基礎開始</a>
+                、
+                <a href="https://www.youtube.com/watch?v=PNEM7CH3ZAg&list=PLYrA-SsMvTPOZeB6DHvB0ewl3miMf-2tj&index=1" target="new">六角學院-GitHub教學</a>
+            </p>
+            <p>備註:使用Git下指令時必須清楚了解現在HEAD位置，在Git Graph工具中藍色圓圈就是當前HEAD所在位置，或使用「cat .git/HEAD」指令查看當前所在分支位置。</p>
         </article>
 
     </main>
